samples/_failures_safe/1761196508_c254ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0595834.c: In function ‘main’:
./samples/SAFE/__tmp_b0595834.c:139:16: error: missing terminating " character
  139 |         printf("Invalid columns for matrix 1\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b0595834.c:139:9: error: expected expression at end of input
  139 |         printf("Invalid columns for matrix 1\n
      |         ^~~~~~
./samples/SAFE/__tmp_b0595834.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0595834.c:139:9: error: expected declaration or statement at end of input
